added little section to report to tell he can build source

--- a/LINGI2132-Langages_et_traducteurs/final report/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/final report/document.tex
@@ -197,4 +197,8 @@ result:
 \begin{lstlisting}
     Error executing code : Trying to add a non integer to an integer.
 \end{lstlisting}
+
+\section{Executing our interpreter}
+There are two ways to us eour interpreter. The first is the easiest and consist of simply running the prebuilt jar file Postal.jar. \\ 
+The second way is to build the project from the source using the build scripts as described in the file "readme\_build\_execute.txt".
 \end{document}
